--- a/Weather_Functions_Exercise.ipynb
+++ b/Weather_Functions_Exercise.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/teaching-repositories/ISYS2001/blob/main/Weather_Functions_Exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/dorji04/ISYS2001/blob/main/Weather_Functions_Exercise.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -99,6 +99,22 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "def function_name(parameter1, parameter2, ..)\n",
+        "\"\"\"\n",
+        "Docstring: A brief description of what the function does.\n",
+        "\"\"\"\n",
+        "# Function body\n",
+        "# Code block that performs the desired operations\n",
+        "\n",
+        "return result  #optional return statement\n"
+      ],
+      "metadata": {
+        "id": "Z0A5QgntoLQ8"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "HVA81Wah2oEJ"
       },
@@ -121,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -146,16 +162,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "K9cBEbH82oEK"
+        "id": "K9cBEbH82oEK",
+        "outputId": "816ed727-a3b5-4c15-d3fd-805589fcf1a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the number of days in the dataset are 7\n"
+          ]
+        }
+      ],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "(len(temperatures))\n",
+        "len(humidity)\n",
+        "print(f\"the number of days in the dataset are {(len(temperatures))}\")"
       ]
     },
     {
@@ -170,16 +201,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "5G-vNagm2oEL"
+        "id": "5G-vNagm2oEL",
+        "outputId": "03b588bd-ba0e-4117-b8ff-94361be3bebb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the total temperature for the week is 154\n"
+          ]
+        }
+      ],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "sum(temperatures)\n",
+        "print(f\"the total temperature for the week is {sum(temperatures)}\")"
       ]
     },
     {
@@ -194,16 +239,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "2BMoNq262oEL"
+        "id": "2BMoNq262oEL",
+        "outputId": "52ac958e-f349-4e2a-8219-7119941c3a6e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the average humidity is 58.142857142857146\n"
+          ]
+        }
+      ],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "sum(humidity)/len(humidity)\n",
+        "print(f\"the average humidity is {sum(humidity)/len(humidity)}\")\n"
       ]
     },
     {
@@ -221,7 +280,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -230,7 +289,10 @@
       },
       "outputs": [],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "def celsius_to_fahrenheit(celsius):\n",
+        "  fahrenheit=((celsius*9)/5)+32\n",
+        "  return fahrenheit"
       ]
     },
     {
@@ -245,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -254,7 +316,10 @@
       },
       "outputs": [],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "def average_temperature(temperatures):\n",
+        "  average=sum(temperatures)/len(temperatures)\n",
+        "  return average"
       ]
     },
     {
@@ -276,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -285,7 +350,19 @@
       },
       "outputs": [],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "def weather_description(temperature, humidity):\n",
+        "  if (temperature>25 and humidity<60):\n",
+        "    return \"Hot and Dry\"\n",
+        "  elif(temperature>25 and humidity<60):\n",
+        "    return \"Hot and Humid\"\n",
+        "  elif(temperature>=15 and temperature<=25 and humidity<60):\n",
+        "    return \"Pleasant\"\n",
+        "  elif(temperature>=15 and temperature<=25 and humidity>=60):\n",
+        "    return \"Comfortable but Humid\"\n",
+        "  else:\n",
+        "     return\"Cool\"\n",
+        "\n"
       ]
     },
     {
@@ -304,7 +381,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -313,7 +390,9 @@
       },
       "outputs": [],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "import numpy as np\n",
+        "temp_array=np.array (temperatures)"
       ]
     },
     {
@@ -332,7 +411,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -341,7 +420,15 @@
       },
       "outputs": [],
       "source": [
-        "# Place your answer here"
+        "# Place your answer here\n",
+        "#Mean temperature\n",
+        "mean= np.mean(temperatures)\n",
+        "#Maximum temperature\n",
+        "max_temp=np.max(temperatures)\n",
+        "#Minimum temperature\n",
+        "min_temp=np.min(temperatures)\n",
+        "#Standard deviation of temperatures\n",
+        "std_temp=np.std(temperatures)\n"
       ]
     },
     {
@@ -372,30 +459,78 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "vscode": {
           "languageId": "python"
         },
-        "id": "zoSnyE8y2oEN"
+        "id": "zoSnyE8y2oEN",
+        "outputId": "3c67caed-e31d-49b7-93ee-2a77ae9c963b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Dashboard of Weather ------\n",
+            "The daily weather description is:\n",
+            "Day 1: Comfortable but Humid\n",
+            "Day 2: Pleasant\n",
+            "Day 3: Comfortable but Humid\n",
+            "Day 4: Pleasant\n",
+            "Day 5: Pleasant\n",
+            "Day 6: Pleasant\n",
+            "Day 7: Comfortable but Humid\n"
+          ]
+        }
+      ],
       "source": [
-        "# Place your answer here"
+        "# Define celsius_to_fahrenheit function\n",
+        "def celsius_to_fahrenheit(celsius):\n",
+        "    fahrenheit = ((celsius * 9) / 5) + 32\n",
+        "    return fahrenheit\n",
+        "\n",
+        "# Define weather description function\n",
+        "def weather_description(temperature, humidity):\n",
+        "    if temperature > 25 and humidity < 60:\n",
+        "        return \"Hot and Dry\"\n",
+        "    elif temperature > 25 and humidity >= 60:\n",
+        "        return \"Hot and Humid\"\n",
+        "    elif 15 <= temperature <= 25 and humidity < 60:\n",
+        "        return \"Pleasant\"\n",
+        "    elif 15 <= temperature <= 25 and humidity >= 60:\n",
+        "        return \"Comfortable but Humid\"\n",
+        "    else:\n",
+        "        return \"Cool\"\n",
+        "\n",
+        "# Values of temperature and humidity\n",
+        "temperatures = [22, 24, 19, 21, 25, 23, 20]  # Weekly temperature data (°C)\n",
+        "humidity = [60, 55, 65, 58, 50, 57, 62]      # Weekly humidity data (%)\n",
+        "\n",
+        "# Using numpy to create an array\n",
+        "import numpy as np\n",
+        "temp_array = np.array(temperatures)\n",
+        "\n",
+        "print(\"--- Dashboard of Weather ------\")\n",
+        "\n",
+        "# Weather description\n",
+        "print(\"The daily weather description is:\")\n",
+        "for i in range(len(temperatures)):\n",
+        "    des = weather_description(temperatures[i], humidity[i])\n",
+        "    print(f\"Day {i + 1}: {des}\")"
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [],
       "metadata": {
-        "id": "0YB6HeX52oEN"
+        "id": "ThYHCHpt6Zf_"
       },
-      "source": [
-        "### 7 Reflection\n",
-        "\n",
-        "Question 13: Briefly explain how functions have helped in organising and\n",
-        "simplifying the code in this weather data analysis exercise.\n",
-        "\n"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
